fix styling issue with page bottom spacing

--- a/web/scss/_page.scss
+++ b/web/scss/_page.scss
@@ -1,5 +1,8 @@
 .page-container {
-    padding-bottom: 3rem;
+
+    &:last-child {
+        padding-bottom: 3rem;
+    }
 
     .page-list-tabs {
 
